--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@ body{
 h2{ text-align:center; margin:6px 0 12px }
 label{ font-size:12px; color:#555; font-weight:bold }
 .req{ color:#e53935 }
-.helper{ font-size:12px; color:#777; margin-top:6px; text-align:center; }
+.helper{ font-size:12px; color:#777; margin-top:6px; text-align:center }
 
 /* ===== INPUT ===== */
 .input-wrap{ position:relative }
 .input-wrap span{
-  position:absolute;
-  left:10px; top:50%;
-  transform:translateY(-50%);
-  opacity:.6;
+  position:absolute; left:10px; top:50%;
+  transform:translateY(-50%); opacity:.6
 }
 input{
   width:100%;
@@ -68,7 +66,7 @@ input{
   box-sizing:border-box;
   text-transform:uppercase;
 }
-::placeholder{ text-transform:none; color:#999; }
+::placeholder{ text-transform:none; color:#999 }
 input:focus{
   border-color:#1e88e5;
   box-shadow:0 0 0 2px rgba(30,136,229,.15);
@@ -168,18 +166,6 @@ button.enabled:hover{
   pointer-events:none;
 }
 
-/* ===== MAINTENANCE ===== */
-.maintenance{
-  max-width:420px;
-  margin:auto;
-  background:#fff;
-  padding:25px 20px;
-  border-radius:10px;
-  box-shadow:0 8px 20px rgba(0,0,0,.08);
-  text-align:center;
-}
-.maintenance p{ font-size:13px; color:#555 }
-
 /* ===== FOOTER ===== */
 .footer{
   margin-top:25px;
@@ -202,18 +188,12 @@ button.enabled:hover{
 <body>
 
 <script>
-/* ===== ON true / OFF false ===== */
+/* ===== CONFIG ===== */
 var FORM_ENABLED = true;
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz5AF9_WCXVX1xv-WbIZu7ig4XX4lqSxpy7Edhq4d5WvsspFUYiXpNeY_C75l50QJmS/exec";
 </script>
 
-<!-- MAINTENANCE -->
-<div class="maintenance" id="maintenanceBox" style="display:none;">
-  <h2>🚧 Temporarily Unavailable</h2>
-  <p>This submission form is currently unavailable.<br><br>
-     Please contact the administrator.</p>
-</div>
-
-<!-- FORM -->
+<!-- ===== FORM ===== -->
 <div class="container" id="formBox">
 <h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
 
@@ -223,49 +203,49 @@ var FORM_ENABLED = true;
 
 <label>Agency Name <span class="req">*</span></label>
 <div class="input-wrap">
-<span>🏢</span>
-<input type="text" id="agency" placeholder="Example: ABC DEBT SDN BHD">
+  <span>🏢</span>
+  <input type="text" id="agency">
 </div>
 <div class="errorText" id="err_agency">This field is required</div>
 
 <label>PIC Name 1 <span class="req">*</span></label>
 <div class="input-wrap">
-<span>👤</span>
-<input type="text" id="pic1" placeholder="Example: MR JOHN DOE">
+  <span>👤</span>
+  <input type="text" id="pic1">
 </div>
 <div class="errorText" id="err_pic1">This field is required</div>
 
 <label>PIC Name 2 (Optional)</label>
 <div class="input-wrap">
-<span>👤</span>
-<input type="text" id="pic2">
+  <span>👤</span>
+  <input type="text" id="pic2">
 </div>
 
 <div class="section-title">Contact Information</div>
 
 <label>Contact No <span class="req">*</span></label>
 <div class="input-wrap">
-<span>📞</span>
-<input type="tel" id="contact1" oninput="formatPhone(this)">
+  <span>📞</span>
+  <input type="tel" id="contact1" oninput="formatPhone(this)">
 </div>
 <div class="errorText" id="err_contact1">This field is required</div>
 
 <label>Contact No (Optional)</label>
 <div class="input-wrap">
-<span>📞</span>
-<input type="tel" id="contact2" oninput="formatPhone(this)">
+  <span>📞</span>
+  <input type="tel" id="contact2" oninput="formatPhone(this)">
 </div>
 
 <label>WhatsApp No <span class="req">*</span></label>
 <div class="input-wrap">
-<span>💬</span>
-<input type="tel" id="whatsapp" oninput="formatPhone(this)">
+  <span>💬</span>
+  <input type="tel" id="whatsapp" oninput="formatPhone(this)">
 </div>
 <div class="errorText" id="err_whatsapp">This field is required</div>
 
 <div class="consent">
-<input type="checkbox" id="consent" onclick="updateState()">
-I confirm the information is accurate.
+  <input type="checkbox" id="consent" onclick="updateState()">
+  I confirm the information is accurate.
 </div>
 
 <button type="submit" id="submitBtn" disabled>Submit</button>
@@ -274,39 +254,22 @@ I confirm the information is accurate.
 </form>
 </div>
 
-<!-- SUCCESS -->
+<!-- ===== SUCCESS ===== -->
 <div class="container success-container" id="successBox" style="display:none;">
 <div class="watermark" id="watermark">SUBMITTED</div>
-
-<div class="successIcon">
-<svg viewBox="0 0 24 24" fill="none">
-<circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
-<path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
-</svg>
-</div>
-
 <h2>Submission Successful</h2>
 <div class="ref" id="refDisplay"></div>
 <div class="summary" id="summaryBox"></div>
-
 <p style="text-align:center;font-size:13px;">You may safely close this page.</p>
 </div>
 
-<!-- FOOTER -->
+<!-- ===== FOOTER ===== -->
 <div class="footer">
 <div class="divider"></div>
 <div id="trademark"></div>
 </div>
 
 <script>
-/* ===== LOAD ===== */
-window.onload=function(){
-  if(!FORM_ENABLED){
-    formBox.style.display="none";
-    maintenanceBox.style.display="block";
-  }
-};
-
 /* ===== VALIDATION ===== */
 const mandatoryFields=[
   {id:"agency",err:"err_agency"},
@@ -317,8 +280,8 @@ const mandatoryFields=[
 
 function formatPhone(el){
   let v=el.value.replace(/\D/g,'');
-  if(v.startsWith("0")) v="6"+v;
-  if(!v.startsWith("6")) v="6"+v;
+  if(v.startsWith("0"))v="6"+v;
+  if(!v.startsWith("6"))v="6"+v;
   el.value=v;
 }
 
@@ -333,28 +296,44 @@ function updateState(){
       i.classList.remove("error"); e.style.display="none";
     }
   });
-  submitBtn.disabled=!ok || !consent.checked;
+  submitBtn.disabled=!ok||!consent.checked;
   submitBtn.classList.toggle("enabled",!submitBtn.disabled);
 }
 
-/* ===== SUBMIT ===== */
+/* ===== SUBMIT + FETCH ===== */
 function submitForm(){
   updateState();
   if(submitBtn.disabled) return false;
 
   const ref=generateRef();
+
+  const data=new URLSearchParams();
+  data.append("ref",ref);
+  data.append("agency",agency.value.toUpperCase());
+  data.append("pic1",pic1.value.toUpperCase());
+  data.append("pic2",pic2.value.toUpperCase());
+  data.append("contact1",contact1.value);
+  data.append("contact2",contact2.value);
+  data.append("whatsapp",whatsapp.value);
+  data.append("consent","YES");
+  data.append("timestamp",new Date().toISOString());
+
+  fetch(SCRIPT_URL,{
+    method:"POST",
+    body:data
+  }).catch(err=>console.error("FETCH ERROR:",err));
+
   formBox.style.display="none";
   successBox.style.display="block";
   watermark.style.display="block";
 
   refDisplay.innerText="REFERENCE NO: "+ref;
-
-  summaryBox.innerHTML = `
+  summaryBox.innerHTML=`
     <div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
     <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
-    ${pic2.value ? `<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>` : ""}
+    ${pic2.value?`<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>`:""}
     <div><b>CONTACT:</b> ${contact1.value}</div>
-    ${contact2.value ? `<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>` : ""}
+    ${contact2.value?`<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>`:""}
     <div><b>WHATSAPP:</b> ${whatsapp.value}</div>
   `;
   return false;
@@ -370,10 +349,10 @@ function generateRef(){
     +String(d.getSeconds()).padStart(2,"0");
 }
 
-/* FOOTER */
+/* ===== FOOTER ===== */
 (function(){
   const year=new Date().getFullYear();
-  trademark.innerHTML = `© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a>`;
+  trademark.innerHTML=`© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a>`;
 })();
 </script>
 
