--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ body{
   background:linear-gradient(90deg,#1e88e5,#42a5f5);
   border-radius:10px 10px 0 0;
 }
+
 .success-container{ max-width:520px; }
 
 @keyframes fade{
@@ -48,13 +49,20 @@ body{
 h2{ text-align:center; margin:6px 0 12px }
 label{ font-size:12px; color:#555; font-weight:bold }
 .req{ color:#e53935 }
-.helper{ font-size:12px; color:#777; margin-top:6px; text-align:center }
+.helper{
+  font-size:12px;
+  color:#777;
+  margin-top:6px;
+  text-align:center;
+}
 
 /* ===== INPUT ===== */
 .input-wrap{ position:relative }
 .input-wrap span{
-  position:absolute; left:10px; top:50%;
-  transform:translateY(-50%); opacity:.6
+  position:absolute;
+  left:10px; top:50%;
+  transform:translateY(-50%);
+  opacity:.6;
 }
 input{
   width:100%;
@@ -66,7 +74,10 @@ input{
   box-sizing:border-box;
   text-transform:uppercase;
 }
-::placeholder{ text-transform:none; color:#999 }
+::placeholder{
+  text-transform:none;
+  color:#999;
+}
 input:focus{
   border-color:#1e88e5;
   box-shadow:0 0 0 2px rgba(30,136,229,.15);
@@ -76,6 +87,7 @@ input.error{
   border-color:#e53935;
   background:#fff5f5;
 }
+
 .errorText{
   font-size:11px;
   color:#e53935;
@@ -157,7 +169,8 @@ button.enabled:hover{
 }
 .watermark{
   position:absolute;
-  top:45%; left:50%;
+  top:45%;
+  left:50%;
   transform:translate(-50%,-50%) rotate(-25deg);
   font-size:48px;
   color:rgba(0,0,0,0.06);
@@ -165,6 +178,18 @@ button.enabled:hover{
   display:none;
   pointer-events:none;
 }
+
+/* ===== MAINTENANCE ===== */
+.maintenance{
+  max-width:420px;
+  margin:auto;
+  background:#fff;
+  padding:25px 20px;
+  border-radius:10px;
+  box-shadow:0 8px 20px rgba(0,0,0,.08);
+  text-align:center;
+}
+.maintenance p{ font-size:13px; color:#555 }
 
 /* ===== FOOTER ===== */
 .footer{
@@ -188,88 +213,124 @@ button.enabled:hover{
 <body>
 
 <script>
-/* ===== CONFIG ===== */
+/* ===== ON / OFF MODE ===== */
 var FORM_ENABLED = true;
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz5AF9_WCXVX1xv-WbIZu7ig4XX4lqSxpy7Edhq4d5WvsspFUYiXpNeY_C75l50QJmS/exec";
 </script>
 
-<!-- ===== FORM ===== -->
+<!-- MAINTENANCE -->
+<div class="maintenance" id="maintenanceBox" style="display:none;">
+  <h2>🚧 Temporarily Unavailable</h2>
+  <p>
+    This submission form is currently unavailable.<br><br>
+    Please contact the administrator.
+  </p>
+</div>
+
+<!-- FORM -->
 <div class="container" id="formBox">
-<h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
+  <h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
 
-<form onsubmit="return submitForm();">
+  <form onsubmit="return submitForm();">
 
-<div class="section-title">Agency Information</div>
+    <div class="section-title">Agency Information</div>
 
-<label>Agency Name <span class="req">*</span></label>
-<div class="input-wrap">
-  <span>🏢</span>
-  <input type="text" id="agency">
+    <label>Agency Name (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>🏢</span>
+      <input type="text" id="agency" placeholder="Example: ABC DEBT SDN BHD">
+    </div>
+    <div class="errorText" id="err_agency">This field is required</div>
+
+    <label>PIC Name 1 (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>👤</span>
+      <input type="text" id="pic1" placeholder="Example: MR JOHN DOE">
+    </div>
+    <div class="errorText" id="err_pic1">This field is required</div>
+
+    <label>PIC Name 2 (Optional)</label>
+    <div class="input-wrap">
+      <span>👤</span>
+      <input type="text" id="pic2" placeholder="Example: MISS JANE DOE">
+    </div>
+
+    <div class="section-title">Contact Information</div>
+
+    <label>Contact No (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>📞</span>
+      <input type="tel" id="contact1" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+    </div>
+    <div class="errorText" id="err_contact1">This field is required</div>
+
+    <label>Contact No (Optional)</label>
+    <div class="input-wrap">
+      <span>📞</span>
+      <input type="tel" id="contact2" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+    </div>
+
+    <label>WhatsApp No (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>💬</span>
+      <input type="tel" id="whatsapp" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+    </div>
+    <div class="errorText" id="err_whatsapp">This field is required</div>
+
+    <div class="consent">
+      <input type="checkbox" id="consent" onclick="updateState()">
+      I confirm that the information provided is accurate and consent to its use
+      for official communication purposes.
+    </div>
+
+    <button type="submit" id="submitBtn">Submit</button>
+    <div class="helper" id="helperText"></div>
+  </form>
 </div>
-<div class="errorText" id="err_agency">This field is required</div>
 
-<label>PIC Name 1 <span class="req">*</span></label>
-<div class="input-wrap">
-  <span>👤</span>
-  <input type="text" id="pic1">
-</div>
-<div class="errorText" id="err_pic1">This field is required</div>
-
-<label>PIC Name 2 (Optional)</label>
-<div class="input-wrap">
-  <span>👤</span>
-  <input type="text" id="pic2">
-</div>
-
-<div class="section-title">Contact Information</div>
-
-<label>Contact No <span class="req">*</span></label>
-<div class="input-wrap">
-  <span>📞</span>
-  <input type="tel" id="contact1" oninput="formatPhone(this)">
-</div>
-<div class="errorText" id="err_contact1">This field is required</div>
-
-<label>Contact No (Optional)</label>
-<div class="input-wrap">
-  <span>📞</span>
-  <input type="tel" id="contact2" oninput="formatPhone(this)">
-</div>
-
-<label>WhatsApp No <span class="req">*</span></label>
-<div class="input-wrap">
-  <span>💬</span>
-  <input type="tel" id="whatsapp" oninput="formatPhone(this)">
-</div>
-<div class="errorText" id="err_whatsapp">This field is required</div>
-
-<div class="consent">
-  <input type="checkbox" id="consent" onclick="updateState()">
-  I confirm the information is accurate.
-</div>
-
-<button type="submit" id="submitBtn" disabled>Submit</button>
-<div class="helper" id="helperText"></div>
-
-</form>
-</div>
-
-<!-- ===== SUCCESS ===== -->
+<!-- SUCCESS -->
 <div class="container success-container" id="successBox" style="display:none;">
-<div class="watermark" id="watermark">SUBMITTED</div>
-<h2>Submission Successful</h2>
-<div class="ref" id="refDisplay"></div>
-<div class="summary" id="summaryBox"></div>
-<p style="text-align:center;font-size:13px;">You may safely close this page.</p>
+  <div class="watermark" id="watermark">SUBMITTED</div>
+
+  <div class="successIcon">
+    <svg viewBox="0 0 24 24" fill="none">
+      <circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
+      <path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
+    </svg>
+  </div>
+
+  <h2>Submission Successful</h2>
+  <div class="ref" id="refDisplay"></div>
+  <div class="summary" id="summaryBox"></div>
+
+  <div class="consent" style="margin-top:15px;">
+    ✔ CONSENT CONFIRMED FOR OFFICIAL COMMUNICATION PURPOSES.
+  </div>
+
+  <p style="text-align:center;font-size:13px;">
+    You may safely close this page.
+  </p>
 </div>
 
-<!-- ===== FOOTER ===== -->
+<!-- FOOTER -->
 <div class="footer">
-<div class="divider"></div>
-<div id="trademark"></div>
+  <div class="divider"></div>
+  <div id="trademark"></div>
+  <div>
+    Information submitted is collected solely for communication and
+    administrative record purposes.
+  </div>
 </div>
 
 <script>
+/* ===== PAGE LOAD ===== */
+window.onload=function(){
+  if(!FORM_ENABLED){
+    formBox.style.display="none";
+    successBox.style.display="none";
+    maintenanceBox.style.display="block";
+  }
+};
+
 /* ===== VALIDATION ===== */
 const mandatoryFields=[
   {id:"agency",err:"err_agency"},
@@ -291,22 +352,34 @@ function updateState(){
     const i=document.getElementById(f.id);
     const e=document.getElementById(f.err);
     if(!i.value.trim()){
-      ok=false; i.classList.add("error"); e.style.display="block";
+      ok=false;
+      i.classList.add("error");
+      e.style.display="block";
     }else{
-      i.classList.remove("error"); e.style.display="none";
+      i.classList.remove("error");
+      e.style.display="none";
     }
   });
+
   submitBtn.disabled=!ok||!consent.checked;
   submitBtn.classList.toggle("enabled",!submitBtn.disabled);
+  helperText.innerText=!ok
+    ?"Please complete all mandatory fields."
+    :!consent.checked
+    ?"Please confirm consent to proceed."
+    :"";
 }
 
-/* ===== SUBMIT + FETCH ===== */
+mandatoryFields.forEach(f=>{
+  document.getElementById(f.id).addEventListener("input",updateState);
+});
+
+/* ===== SUBMIT ===== */
 function submitForm(){
   updateState();
   if(submitBtn.disabled) return false;
 
   const ref=generateRef();
-
   const data=new URLSearchParams();
   data.append("ref",ref);
   data.append("agency",agency.value.toUpperCase());
@@ -316,26 +389,23 @@ function submitForm(){
   data.append("contact2",contact2.value);
   data.append("whatsapp",whatsapp.value);
   data.append("consent","YES");
-  data.append("timestamp",new Date().toISOString());
 
-  fetch(SCRIPT_URL,{
-    method:"POST",
-    body:data
-  }).catch(err=>console.error("FETCH ERROR:",err));
+  fetch("https://script.google.com/macros/s/AKfycbxOQSUWLw2C0BP5FHu3wBsHw1irrB-qwGMRlzO_xtTMqrnYPcUQlV4wkquytKpwtQ/exec",
+    {method:"POST",body:data});
 
   formBox.style.display="none";
   successBox.style.display="block";
   watermark.style.display="block";
 
   refDisplay.innerText="REFERENCE NO: "+ref;
-  summaryBox.innerHTML=`
-    <div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
-    <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
-    ${pic2.value?`<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>`:""}
-    <div><b>CONTACT:</b> ${contact1.value}</div>
-    ${contact2.value?`<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>`:""}
-    <div><b>WHATSAPP:</b> ${whatsapp.value}</div>
-  `;
+  summaryBox.innerHTML=
+    `<div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
+     <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
+     ${pic2.value?`<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>`:""}
+     <div><b>CONTACT (MANDATORY):</b> ${contact1.value}</div>
+     ${contact2.value?`<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>`:""}
+     <div><b>WHATSAPP NO:</b> ${whatsapp.value}</div>`;
+
   return false;
 }
 
@@ -349,10 +419,11 @@ function generateRef(){
     +String(d.getSeconds()).padStart(2,"0");
 }
 
-/* ===== FOOTER ===== */
+/* FOOTER */
 (function(){
   const year=new Date().getFullYear();
-  trademark.innerHTML=`© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a>`;
+  trademark.innerHTML=
+    `© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · For Authorized Agency Use`;
 })();
 </script>
 
