--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@ button.enabled:hover{
 
 <script>
 /* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = true;
+var FORM_ENABLED = false;
 </script>
 
 <!-- MAINTENANCE -->
 <div class="maintenance" id="maintenanceBox" style="display:none;">
-  <h2>🚧 Temporarily Unavailable</h2>
+  <h2>🚧 Temporarily Unavailable 🚧</h2>
   <p>
     This submission form is currently unavailable.<br><br>
-    Please contact the administrator.
+    Please contact Cik Syah.
   </p>
 </div>
 
