--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@ var FORM_ENABLED = false;
 
 <!-- MAINTENANCE -->
 <div class="maintenance" id="maintenanceBox" style="display:none;">
-  <h2>🚧 Temporarily Unavailable 🚧</h2>
+  <h2>🚧 Temporarily Unavailable</h2>
   <p>
     This submission form is currently unavailable.<br><br>
-    Please contact Cik Syah.
+    Please contact Cik Syah at HQ Singer.
   </p>
 </div>
 
