--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ button.enabled:hover{
 
 <script>
 /* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = false;
+var FORM_ENABLED = true;
 </script>
 
 <!-- MAINTENANCE -->
